crates/tui/src/bottom_pane/snapshots/savfox_tui__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: crates/tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
                                                
────────────────────────────────────────────────
❯ Type @ to mention files, / for commands, or ? 
────────────────────────────────────────────────
  ? for shortcuts            100% context left
