crates/tui/src/bottom_pane/snapshots/savfox_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: crates/tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interru
                              
                              
──────────────────────────────
❯ Type @ to mention files, /  
──────────────────────────────
             [░░░░░░░░░░] 0%
