crates/tui/src/bottom_pane/snapshots/savfox_tui__bottom_pane__tests__status_and_queued_messages_snapshot.snap
---
source: crates/tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
                                                
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
                                                
────────────────────────────────────────────────
❯ Type @ to mention files, / for commands, or ? 
────────────────────────────────────────────────
  ? for shortcuts              [░░░░░░░░░░] 0%
