crates/tui/src/bottom_pane/snapshots/savfox_tui__bottom_pane__tests__status_only_snapshot.snap
---
source: crates/tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
                                                
                                                
────────────────────────────────────────────────
❯ Type @ to mention files, / for commands, or ? 
────────────────────────────────────────────────
  ? for shortcuts            100% context left
