crates/tui/src/bottom_pane/snapshots/savfox_tui__bottom_pane__tests__status_with_details_and_queued_messages_snapshot.snap
---
source: crates/tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
  └ First detail line                           
    Second detail line                          
                                                
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
                                                
────────────────────────────────────────────────
❯ Type @ to mention files, / for commands, or ? 
────────────────────────────────────────────────
  ? for shortcuts            100% context left
